# linux-console-games

./: .gitignore  BACKLOG.txt  Cargo.toml  README.md
src/: console.rs  grid.rs  main.rs  menu.rs  persistence.rs  shape.rs  tetris.rs  tetrismain.rs  wator.rs  watormain.rs
src/arkanoid/: arkanoid.rs  arkanoidmain.rs  mod.rs
src/common/: consolecolor.rs  grid.rs  ioutils.rs  menu.rs  mod.rs  persistence.rs  point.rs  printutils.rs
src/snake/: mod.rs  snake.rs  snakemain.rs
src/spaceinvaders/: mod.rs  spaceinvaders.rs  spaceinvadersmain.rs
src/tetris/: mod.rs  shape.rs  tetris.rs  tetrismain.rs
src/wator/: mod.rs  wator.rs  watormain.rs
