[package]
name = "consolegames"
version = "0.1.0"
authors = ["Enrico Benedetti <enrico_benedetti@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
termion = "1.5.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.40"
chrono = { version = "0.4.7", features = ["serde"] }
dirs = "2.0.1"
